NetBSD Problem Report #34240
From www@NetBSD.org Sun Aug 20 00:21:53 2006
Return-Path: <www@NetBSD.org>
Received: by narn.NetBSD.org (Postfix, from userid 31301)
id 0524D63B964; Sun, 20 Aug 2006 00:21:53 +0000 (UTC)
Message-Id: <20060820002153.0524D63B964@narn.NetBSD.org>
Date: Sun, 20 Aug 2006 00:21:53 +0000 (UTC)
From: tokuda@tokuda.net
Reply-To: tokuda@tokuda.net
To: gnats-bugs@NetBSD.org
Subject: arm/ep93xx/epwdog.c doesn't compile
X-Send-Pr-Version: www-1.0
>Number: 34240
>Category: port-arm
>Synopsis: arm/ep93xx/epwdog.c doesn't compile
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: port-arm-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sun Aug 20 00:25:00 +0000 2006
>Closed-Date: Mon Aug 21 15:13:02 +0000 2006
>Last-Modified: Fri Sep 01 06:22:53 +0000 2006
>Originator: Hiroshi Tokuda
>Release: 4.99.1
>Organization:
TOKUDA.NET
>Environment:
Darwin macbook.local 8.6.2 Darwin Kernel Version 8.6.2: Thu Apr 13 18:48:29 PDT 2006; root:xnu-792.9.59.obj~1/RELEASE_I386 i386 i386
>Description:
unterminated #ifdef
# create ARMADILLO9/epwdog.d
CC=/Volumes/HFSXimage/t/20060816/evbarm/bin/arm--netbsdelf-gcc /Volumes/HFSXimage/t/20060816/evbarm/bin/nbmkdep -f epwdog.d -- -ffreestanding -fno-zero-initialized-in-bss -O2 -Werror -Wall -Wno-main -Wno-format-zero-length -Wpointer-arith -Wmissing-prototypes -Wstrict-prototypes -Wswitch -Wshadow -Wcast-qual -Wwrite-strings -Wno-sign-compare -Wno-pointer-sign -Wno-attributes -fno-strict-aliasing -I. -I/Volumes/HFSXimage/s/20060816/src/sys/../common/include -I/Volumes/HFSXimage/s/20060816/src/sys/arch -I/Volumes/HFSXimage/s/20060816/src/sys -nostdinc -DMSGBUFSIZE="65536" -DCONSPEED="115200" -DCONUNIT="0" -DDIAGNOSTIC -DMAXUSERS=16 -D_KERNEL -D_KERNEL_OPT -I/Volumes/HFSXimage/s/20060816/src/sys/lib/libkern/../../../common/lib/libc/quad -I/Volumes/HFSXimage/s/20060816/src/sys/lib/libkern/../../../common/lib/libc/string -I/Volumes/HFSXimage/s/20060816/src/sys/lib/libkern/../../../common/lib/libc/arch/arm/string /Volumes/HFSXimage/s/20060816/src/sys/arch/arm/ep93xx/epwdog.c
/Volumes/HFSXimage/s/20060816/src/sys/arch/arm/ep93xx/epwdog.c:78:1: error: unterminated #ifdef
nbmkdep: compile failed.
*** Failed target: epwdog.d
*** Failed command: CC=/Volumes/HFSXimage/t/20060816/evbarm/bin/arm--netbsdelf-gcc /Volumes/HFSXimage/t/20060816/evbarm/bin/nbmkdep -f epwdog.d -- -ffreestanding -fno-zero-initialized-in-bss -O2 -Werror -Wall -Wno-main -Wno-format-zero-length -Wpointer-arith -Wmissing-prototypes -Wstrict-prototypes -Wswitch -Wshadow -Wcast-qual -Wwrite-strings -Wno-sign-compare -Wno-pointer-sign -Wno-attributes -fno-strict-aliasing -I. -I/Volumes/HFSXimage/s/20060816/src/sys/../common/include -I/Volumes/HFSXimage/s/20060816/src/sys/arch -I/Volumes/HFSXimage/s/20060816/src/sys -nostdinc -DMSGBUFSIZE="65536" -DCONSPEED="115200" -DCONUNIT="0" -DDIAGNOSTIC -DMAXUSERS=16 -D_KERNEL -D_KERNEL_OPT -I/Volumes/HFSXimage/s/20060816/src/sys/lib/libkern/../../../common/lib/libc/quad -I/Volumes/HFSXimage/s/20060816/src/sys/lib/libkern/../../../common/lib/libc/string -I/Volumes/HFSXimage/s/20060816/src/sys/lib/libkern/../../../common/lib/libc/arch/arm/string /Volumes/HFSXimage/s/20060816/src/sys/arch/arm/ep93xx/epwdog.c
*** Error code 1
Stop.
nbmake: stopped in /Volumes/HFSXimage/o/20060816/evbarm/sys/arch/evbarm/compile/ARMADILLO9
ERROR: Failed to make depend in /Volumes/HFSXimage/o/20060816/evbarm/sys/arch/evbarm/compile/ARMADILLO9
*** BUILD ABORTED ***
>How-To-Repeat:
./build.sh -m evbarm kernel=ARMADILLO9
>Fix:
--- epwdog.c.orig 2006-08-20 09:15:45.000000000 +0900
+++ epwdog.c 2006-08-20 09:16:11.000000000 +0900
@@ -78,6 +78,8 @@
#ifdef DIAGNOSTIC
else
printf("%s is already configured\n", sc->sc_dev.dv_xname);
+#endif
+}
int
epwdog_reset(void)
>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->closed
State-Changed-By: hamajima@netbsd.org
State-Changed-When: Mon, 21 Aug 2006 15:13:02 +0000
State-Changed-Why:
I commited this patch. thanks.
From: Matthias Scheler <tron@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: PR/34240 CVS commit: [netbsd-4] src/sys/arch/arm/ep93xx
Date: Wed, 23 Aug 2006 21:24:28 +0000 (UTC)
Module Name: src
Committed By: tron
Date: Wed Aug 23 21:24:28 UTC 2006
Modified Files:
src/sys/arch/arm/ep93xx [netbsd-4]: epwdog.c
Log Message:
Pull up following revision(s) (requested by hamajima in ticket #44):
sys/arch/arm/ep93xx/epwdog.c: revision 1.3
fix unterminated #ifdef. PR34240.
To generate a diff of this commit:
cvs rdiff -r1.2 -r1.2.8.1 src/sys/arch/arm/ep93xx/epwdog.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: Katsuomi Hamajima <hamajima@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: PR/34240 CVS commit: src/sys/arch/arm/ep93xx
Date: Mon, 21 Aug 2006 15:01:54 +0000 (UTC)
Module Name: src
Committed By: hamajima
Date: Mon Aug 21 15:01:54 UTC 2006
Modified Files:
src/sys/arch/arm/ep93xx: epwdog.c
Log Message:
fix unterminated #ifdef. PR34240.
To generate a diff of this commit:
cvs rdiff -r1.2 -r1.3 src/sys/arch/arm/ep93xx/epwdog.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.