Pull up following revision(s) (requested by hamajima in ticket #44): 	sys/arch/arm/ep93xx/epwdog.c: revision 1.3 fix unterminated #ifdef. PR34240.